delte some content

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
         	<div class="image">
-        		<img src="image/slide1.jpg">
+        		<img src="slide1.jpg">
         	</div>
         </div>
         <div class="swiper-slide">
         	<div class="image">
-        		<img src="image/slide2.jpg">
+        		<img src="slide2.jpg">
         	</div>
         </div>
         <div class="swiper-slide">
         	<div class="image">
-        		<img src="image/slide1.jpg">
+        		<img src="slide1.jpg">
         	</div></div>
         <div class="swiper-slide">
         	<div class="image">
